# qitools

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  QiTools.pro  qitools.pri  qitools.pro
.githooks/: pre-push
.github/workflows/: build.yml  ci-qt6.yml
CMake/: get_depends.cmake  pch_gcc4.cmake  qitools_common.cmake  qt_compatibility.cmake
qitools-cli/: README.md  pyproject.toml
qitools-cli/qitools_cli/: __init__.py  __main__.py  cli.py
qitools-cli/qitools_cli/commands/: __init__.py  audio.py  codec.py  color.py  cppgen.py  download.py  glsl.py  image.py
qitools-cli/qitools_cli/core/: __init__.py  audio_processor.py  codec_converter.py  color_converter.py  downloader.py  glsl_converter.py  image_converter.py  property_generator.py
qitools-cli/qitools_cli/utils/: __init__.py  errors.py  output.py
qitools-cli/tests/: __init__.py  test_audio.py  test_codec.py  test_color.py  test_cppgen.py  test_download.py  test_glsl.py  test_image.py
resource/: QiTools.css  icon.rc  qitools.qrc  toolsimage.icns
scripts/: del_exp_ilk_pdb.bat  deployqt-someskips.bat  gen_cmake-presets-json.py  package2sh.sh
src/: CMakeLists.txt  dynamicplugin.pri  main.cpp  propertygenerator.cpp  propertygenerator.h  propertygenerator.ui  propertymanager.cpp  propertymanager.h  qitoolswindow.cpp  qitoolswindow.h  qitoolswindow.ui  src.pri  src.pro  stable.h
src/audio/: CMakeLists.txt  audio-zh_CN.ts  audio.pri  audio.pro  audiodataplay.cpp  audiodataplay.h  audiowidget.cpp  audiowidget.h  audiowidget.ui  struct_id3v2.h  wavfile.cpp  wavfile.h
src/audio/minimp3/: CMakeLists.txt  exmp3.h  minimp3.pri
src/codecconvert/: CMakeLists.txt  codecconvert-zh_CN.ts  codecconvert.pri  codecconvert.pro  codecconvertwidget.cpp  codecconvertwidget.h  codecconvertwidget.ui  multidirectorydialog.cpp  multidirectorydialog.h  sourcefilefilter.cpp  sourcefilefilter.h
src/codegen/: CMakeLists.txt  codegen-zh_CN.ts  codegen.pro  propertygenerator.cpp  propertygenerator.h  propertygenerator.ui  propertymanager.cpp  propertymanager.h
src/color/: CMakeLists.txt  color.pri  colorconvert.cpp  colorconvert.h  colorconvert.ui  screencolorpicker.cpp  screencolorpicker.h
src/colortool/: CMakeLists.txt  colorconvert.cpp  colorconvert.h  colorconvert.ui  colortool-zh_CN.ts  colortool.pro  colortool.qrc  screencolorpicker.cpp  screencolorpicker.h
src/core/: CMakeLists.txt  core-zh_CN.ts  core.pro  main.cpp  pluginmanager.cpp  pluginmanager.h  pluginterface.h  qitoolswindow.cpp  qitoolswindow.h  stable.h
src/cppcodegen/: CMakeLists.txt  cppcodegen.pro  propertygenerator.cpp  propertygenerator.ui
src/glsltool/: CMakeLists.txt  glslcodeconvert.cpp  glslcodeconvert.h  glslcodeconvert.ui  glsltool-zh_CN.ts  glsltool.pri  glsltool.pro
src/imageconvert/: CMakeLists.txt  imageconvert-zh_CN.ts  imageconvert.pri  imageconvert.pro  imagetoolwidget.cpp  imagetoolwidget.h  imagetoolwidget.ui
src/property/: CMakeLists.txt  property.pri  propertygenerator.cpp  propertygenerator.h  propertymanager.cpp  propertymanager.h
src/resource/: QiTools.css
src/simpledownload/: CMakeLists.txt  downloadwidget.cpp  downloadwidget.h  downloadwidget.ui  networkcontrol.cpp  networkcontrol.h  simpledownload-zh_CN.ts  simpledownload.pro
src/tests/: CMakeLists.txt  tst_sourcefilefilter.cpp
src/vsc_vsix/: CMakeLists.txt  downvscvsixwidget.cpp  downvscvsixwidget.h  downvscvsixwidget.ui  networkcontrol.cpp  networkcontrol.h  vsc_vsix.pri
